ci: Remove dependencies step as its linux based

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,12 +238,12 @@ jobs: # Each project will have individual jobs for each specific task it has to 
         default: false
     steps:
       - checkout
-      - run:
-          name: Install Dependencies
-          command: |
-            curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin
-            apt-get update
-            apt-get install -y zip
+      # - run:
+      #     name: Install Dependencies
+      #     command: |
+      #       curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin
+      #       apt-get update
+      #       apt-get install -y zip
       - run:
           name: Restore << parameters.slnname >>
           command: nuget restore << parameters.slnname >>/<< parameters.slnname >>.sln
